Fix Dark Mode and bump release

--- a/src/ui/views/countdown/AnalogChronometer.css
+++ b/src/ui/views/countdown/AnalogChronometer.css
@@ -12,8 +12,8 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #fff;
-  border: 2px solid var(--color-text-tertiary);
+  background: var(--color-background-primary);
+  border: 2px solid var(--color-separator);
 }
 
 .chrono-face::before {
@@ -36,7 +36,7 @@
   width: 1px;
   height: 35px;
   background: #ff0000;
-  box-shadow: 0 0 0 1px #ffffff;
+  box-shadow: 0 0 0 1px var(--color-background-primary);
   transform-origin: bottom center;
   transform: translate(-50%, -100%) rotate(0deg);
   transition: transform 1s ease-in-out;
